Pregunta sobre el mañana

--- a/subidaXD.html
+++ b/subidaXD.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <p>Veamos que es lo que puede pasar</p>
+    <p>Bueno que es lo que debemos de hacer ahora?</p>
+    <p><b>Yo en lo personal creo que terminar lo de matemáticas xd.</b></p>
 </body>
 </html>
